--- a/app/src/main/res/layout/activity_vehicle.xml
+++ b/app/src/main/res/layout/activity_vehicle.xml
@@ -17,7 +17,8 @@
             android:layout_margin="10dp"
             android:elevation="1dp"
             app:cardCornerRadius="10dp"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <RelativeLayout
                 android:layout_width="match_parent"
